# vllm

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  Dockerfile.base  Dockerfile.cudagraphbug.rocm6.0  Dockerfile.cudagraphbug.rocm6.1  Dockerfile.moe  Dockerfile.rocm  Dockerfile.rocm.perf.benchmark  Dockerfile.rocm_base  Dockerfile.tvtest  README.md  README.vllm  StuffWorksP3l.txt  \  acc.sh  baseline_moe_kernel.ttgir  baseline_moe_kernel2.ttgir  benchmark_pg.py  benchmark_pg_custom.py  benchmark_w8a8_block_fp8_matmul.py  comp.txt  compErrToFix.txt  custom.py  didIbreakIt.txt  fa_arch.patch  fixedOutput.txt  fp8test.txt  fp8test2.txt  install-vlllm-for-bare-metal.sh  install-vllm-for-bare-metal.md  nolds_moe_kernel.ttgir  nolds_moe_kernel2.ttgir  output.txt  p3l70b.txt  p3lDimCrushed.txt  p3lFinal.txt  p3lPostKernelFix.txt  (+29 more)
.buildkite/: run-amd-test.sh  test-pipeline.yaml  test-template.j2
.github/: CODEOWNERS
.glog/: glog-scan.sarif
Mixtral-8x7B-Instruct-v0.1/: JsonHelper.py  README.md  benchmark_scan.sh  create_json.py
benchmarks/: P3L.py  backend_request_func.py  benchmark_acc.py  benchmark_latency+accuracy_check.py  benchmark_latency.py  benchmark_latency_accuracy_check.py  benchmark_latency_vllm_DLM.py  benchmark_prof.py  benchmark_serving.py  benchmark_sweep.sh  benchmark_throughput-ids-bs.py  benchmark_throughput.py  copy_kernel.sh  data_loader.py  invk1.json  (+17 more)
gradlib/: CMakeLists.txt  GemmTuner.py  gemm_runner.py  gemm_tuner.py  setup.py
gradlib/csrc/: hipbsolgemm.cu  rocsolgemm.cu
gradlib/gradlib/: GemmTuner.py  gemm_runner.py  gemm_tuner.py  mm_test.py
gradlib/testing/: config.json
(+522 files in other folders)
